force-app/main/default/objects/incomlend_product__c/incomlend_product__c.object-meta.xml
<CustomObject>
    <label>Custom product</label>
    <nameField>
        <label>custom product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>