force-app/main/default/objects/incomlend_product__c/fields/approved_date__c.field-meta.xml
<CustomField>
    <fullName>approved_date__c</fullName>
    <label>approved date</label>
    <type>Date</type>
</CustomField>