force-app/main/default/objects/incomlend_product__c/fields/Auction_Type__c.field-meta.xml
<CustomField>
    <fullName>Auction_Type__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Discount Rate</fullName>
            </value>
            <value>
                <fullName>Auction</fullName>
            </value>
            <value>
                <fullName>No Auction</fullName>
            </value>
            <value>
                <fullName>Passthrough</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>