force-app/main/default/objects/incomlend_product__c/fields/charge_variable_platform_fee__c.field-meta.xml
<CustomField>
    <fullName>charge_variable_platform_fee__c</fullName>
    <defaultValue>true</defaultValue>
    <label>charge variable platform fee</label>
    <type>Checkbox</type>
</CustomField>