force-app/main/default/objects/incomlend_product__c/fields/default_product__c.field-meta.xml
<CustomField>
    <fullName>default_product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>default product</label>
    <type>Checkbox</type>
</CustomField>