force-app/main/default/objects/incomlend_product__c/fields/disclosed_to_buyer__c.field-meta.xml
<CustomField>
    <fullName>disclosed_to_buyer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>disclosed to buyer</label>
    <type>Checkbox</type>
</CustomField>