force-app/main/default/objects/incomlend_product__c/fields/Exception_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Exception_Guidelines__c</fullName>
    <label>Exception Guidelines</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>