force-app/main/default/objects/incomlend_product__c/fields/Fixed_Platform_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Platform_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fixed Platform Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>