force-app/main/default/objects/incomlend_product__c/fields/General_Principals__c.field-meta.xml
<CustomField>
    <fullName>General_Principals__c</fullName>
    <label>General Principles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>