force-app/main/default/objects/incomlend_product__c/fields/insured__c.field-meta.xml
<CustomField>
    <fullName>insured__c</fullName>
    <defaultValue>true</defaultValue>
    <label>insured</label>
    <type>Checkbox</type>
</CustomField>