force-app/main/default/objects/incomlend_product__c/fields/Invoice_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Record_Type__c</fullName>
    <label>Invoice Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>