force-app/main/default/objects/incomlend_product__c/fields/launch_date__c.field-meta.xml
<CustomField>
    <fullName>launch_date__c</fullName>
    <label>launch date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>