force-app/main/default/objects/incomlend_product__c/fields/List_on_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>List_on_Marketplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>List on Marketplace</label>
    <type>Checkbox</type>
</CustomField>