force-app/main/default/objects/incomlend_product__c/fields/max_invoice_value_USD__c.field-meta.xml
<CustomField>
    <fullName>max_invoice_value_USD__c</fullName>
    <label>max invoice value (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>