force-app/main/default/objects/incomlend_product__c/fields/Maximum_Financing_Period__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Financing_Period__c</fullName>
    <label>Maximum Financing Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>