force-app/main/default/objects/incomlend_product__c/fields/maximum_funding_pct__c.field-meta.xml
<CustomField>
    <fullName>maximum_funding_pct__c</fullName>
    <label>maximum funding pct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>