force-app/main/default/objects/incomlend_product__c/fields/minimum_face_value__c.field-meta.xml
<CustomField>
    <fullName>minimum_face_value__c</fullName>
    <label>minimum face value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>