force-app/main/default/objects/incomlend_product__c/fields/minimum_funding_pct__c.field-meta.xml
<CustomField>
    <fullName>minimum_funding_pct__c</fullName>
    <label>minimum funding pct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>