force-app/main/default/objects/incomlend_product__c/fields/months_relationship_with_buyer__c.field-meta.xml
<CustomField>
    <fullName>months_relationship_with_buyer__c</fullName>
    <label>minimum months relationship with buyer</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>