force-app/main/default/objects/incomlend_product__c/fields/pays_agent_commissions__c.field-meta.xml
<CustomField>
    <fullName>pays_agent_commissions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>pays agent commissions</label>
    <type>Checkbox</type>
</CustomField>