force-app/main/default/objects/incomlend_product__c/fields/public_product_name__c.field-meta.xml
<CustomField>
    <fullName>public_product_name__c</fullName>
    <label>public product name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>