force-app/main/default/objects/incomlend_product__c/fields/recourse_to_supplier__c.field-meta.xml
<CustomField>
    <fullName>recourse_to_supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>recourse to supplier</label>
    <type>Checkbox</type>
</CustomField>