force-app/main/default/objects/incomlend_product__c/fields/retirement_date__c.field-meta.xml
<CustomField>
    <fullName>retirement_date__c</fullName>
    <label>retirement date</label>
    <type>Date</type>
</CustomField>