force-app/main/default/objects/incomlend_product__c/fields/trustee__c.field-meta.xml
<CustomField>
    <fullName>trustee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>trustee</label>
    <type>Checkbox</type>
</CustomField>